Project unity_ab_testing_infological {
  database_type: 'PostgreSQL'
  Note: 'Детализированная инфологическая модель рабочей базы данных системы A/B-тестирования параметров Unity WebGL.'
}

Table accounts {
  account_id bigint [pk, increment, note: 'PK. Ключ аккаунта']
  email varchar(255) [not null, unique, note: 'BK. Электронная почта администратора']
  password_hash text [not null, note: 'Хэш пароля']
  created_at timestamp [note: 'Дата создания аккаунта']

  Note: 'Аккаунт администратора системы.'
}

Table applications {
  application_id bigint [pk, increment, note: 'PK. Ключ приложения']
  account_id bigint [not null, note: 'FK. Ключ аккаунта']
  name varchar(255) [not null, note: 'Название приложения']
  description text [note: 'Описание приложения']
  icon_url text [note: 'Ссылка на иконку приложения']
  created_at timestamp [note: 'Дата создания приложения']

  Note: 'Unity WebGL-приложение, параметры которого настраиваются через административную панель.'
}

Table parameters {
  parameter_id bigint [pk, increment, note: 'PK. Ключ параметра']
  application_id bigint [not null, note: 'FK. Ключ приложения']
  parameter_key varchar(100) [not null, note: 'BK. Системный ключ параметра']
  parameter_name varchar(255) [not null, note: 'Название параметра']
  parameter_type varchar(20) [not null, note: 'Тип параметра: int, float, bool, string']
  description text [note: 'Описание параметра']
  value_int integer [note: 'Рабочее значение целого типа']
  value_float numeric(18,6) [note: 'Рабочее значение дробного типа']
  value_bool boolean [note: 'Рабочее значение логического типа']
  value_string text [note: 'Рабочее значение строкового типа']
  created_at timestamp [note: 'Дата создания параметра']

  indexes {
    (application_id, parameter_key) [unique, name: 'uq_parameters_application_key']
  }

  Note: 'Параметр приложения и его текущее рабочее значение.'
}

Table experiments {
  experiment_id bigint [pk, increment, note: 'PK. Ключ эксперимента']
  application_id bigint [not null, note: 'FK. Ключ приложения']
  name varchar(255) [not null, note: 'Название эксперимента']
  description text [note: 'Описание эксперимента']
  status varchar(20) [not null, note: 'Статус: draft, active, finished']
  winner_variant_code char(1) [note: 'Победивший вариант: A или B']
  created_at timestamp [note: 'Дата создания эксперимента']
  started_at timestamp [note: 'Дата запуска эксперимента']
  finished_at timestamp [note: 'Дата завершения эксперимента']

  Note: 'A/B-эксперимент приложения. Для одного приложения одновременно допускается только один активный эксперимент.'
}

Table experiment_parameters {
  experiment_parameter_id bigint [pk, increment, note: 'PK. Ключ настройки параметра эксперимента']
  experiment_id bigint [not null, note: 'PK, FK. Ключ эксперимента']
  parameter_id bigint [not null, note: 'PK, FK. Ключ параметра']
  variant_a_value_int integer [note: 'Значение варианта A целого типа']
  variant_a_value_float numeric(18,6) [note: 'Значение варианта A дробного типа']
  variant_a_value_bool boolean [note: 'Значение варианта A логического типа']
  variant_a_value_string text [note: 'Значение варианта A строкового типа']
  variant_b_value_int integer [note: 'Значение варианта B целого типа']
  variant_b_value_float numeric(18,6) [note: 'Значение варианта B дробного типа']
  variant_b_value_bool boolean [note: 'Значение варианта B логического типа']
  variant_b_value_string text [note: 'Значение варианта B строкового типа']

  indexes {
    (experiment_id, parameter_id) [unique, name: 'uq_experiment_parameters_pair']
  }

  Note: 'Детали эксперимента: какие параметры участвуют в эксперименте и какие значения получают варианты A и B.'
}

Table user_variant_assignments {
  assignment_id bigint [pk, increment, note: 'PK. Ключ назначения варианта']
  experiment_id bigint [not null, note: 'PK, FK. Ключ эксперимента']
  user_id varchar(255) [not null, note: 'PK. Идентификатор пользователя Unity-клиента']
  variant_code char(1) [not null, note: 'Назначенный вариант: A или B']
  assigned_at timestamp [note: 'Дата назначения варианта']

  indexes {
    (experiment_id, user_id) [unique, name: 'uq_user_variant_assignments_user']
  }

  Note: 'Назначение пользователя Unity-клиента на вариант A/B внутри эксперимента.'
}

Ref: applications.account_id > accounts.account_id
Ref: parameters.application_id > applications.application_id
Ref: experiments.application_id > applications.application_id
Ref: experiment_parameters.experiment_id > experiments.experiment_id
Ref: experiment_parameters.parameter_id > parameters.parameter_id
Ref: user_variant_assignments.experiment_id > experiments.experiment_id
